force-app/main/default/objects/Portal_Login_Message__c/Portal_Login_Message__c.object-meta.xml
<CustomObject>
    <description>Used to show messages on portals</description>
    <label>Portal Login Message</label>
    <nameField>
        <displayFormat>PLM-{0000}</displayFormat>
        <label>Portal Login Message Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Portal Login Messages</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>