force-app/main/default/objects/Portal_Login_Message__c/fields/End_Time__c.field-meta.xml
<CustomField>
    <fullName>End_Time__c</fullName>
    <inlineHelpText>Time after which this message should no longer be shown at login</inlineHelpText>
    <label>End Time</label>
    <type>DateTime</type>
</CustomField>