force-app/main/default/objects/Portal_Login_Message__c/fields/Message__c.field-meta.xml
<CustomField>
    <fullName>Message__c</fullName>
    <inlineHelpText>The message to show at login</inlineHelpText>
    <label>Message</label>
    <length>32768</length>
    <type>Html</type>
</CustomField>