force-app/main/default/objects/Portal_Login_Message__c/fields/Start_Time__c.field-meta.xml
<CustomField>
    <fullName>Start_Time__c</fullName>
    <inlineHelpText>Logins at or after this time should see this message</inlineHelpText>
    <label>Start Time</label>
    <type>DateTime</type>
</CustomField>